<resources>
    <string name="app_name">StokTakip</string>

    <string name="title_activity_anasayfa">AnasayfaActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Kullanıcı Adı</string>
    <string name="nav_stoklistesi_title">Stok Listesi</string>
    <string name="nav_urunsat_title">Ürün Sat</string>
    <string name="nav_urunal_title">Ürün Al</string>
    <string name="nav_azalanurunler_title">Azalan Ürünler</string>
    <string name="nav_islemgecmisi_title">İşlem Geçmişi</string>
    <string name="nav_istatistikler_title">İstatistikler</string>
    <string name="nav_veritabani_title">Veritabanı</string>
    <string name="nav_ayarlar_title">Ayarlar</string>
    <string name="nav_cikis_yap_title">Çıkış Yap</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_cikis_yap">Çıkış Yap</string>

    <string name="giris">Giriş Yap</string>
    <string name="kadi">Kullanıcı Adı</string>
    <string name="sifre">Şifre</string>
    <string name="sifretekrar">Şifre Tekrarı</string>
    <string name="yeni_sifre">Yeni Şifre</string>
    <string name="yeni_sifre_terkrar">Yeni Şifre Tekrarı</string>
    <string name="kaydol">Hesabınız yok mu? Kayıt olun.</string>
    <string name="hatirla">Giriş bilgilerini hatırla</string>
    <string name="uyeol">Kayıt Ol</string>
    <string name="sepet">Ürün Sepeti</string>
    <string name="aciklama">Açıklama (İsteğe Bağlı)</string>
    <string name="urunal">Ürün Al</string>
    <string name="urunsat">Ürün Sat</string>
    <string name="urunekle">Yeni Ürün Ekle</string>
    <string name="urunguncelle">Ürün Güncelle</string>
    <string name="barkodno">Barkod No</string>
    <string name="alisfiyati">Alış Fiyatı</string>
    <string name="satisfiyati">Satış Fiyatı</string>
    <string name="ekle">Ekle</string>

    <string name="urunadi">Ürün Adı</string>
    <string name="ornekbarkod">123456789012</string>
    <string name="ornekstokadet">123</string>
    <string name="ornekfiyat">1.25/1.75</string>

    <string name="stoksil">Sil</string>
    <string name="stokguncelle">Güncelle</string>
    <string name="iptal">İptal</string>

    <string name="sepetbosalt">Sepeti Boşalt</string>
    <string name="sepetbos">Sepette hiç ürün yok.</string>

    <string name="esik">Azalan Ürün Eşiği: </string>
    <string name="kaydet">Kaydet</string>

    <string name="spinner_id">spinner</string>

    <string-array name="spinner_filtre_sureleri">
        <item>Son 1 Gün</item>
        <item>Son 1 Hafta</item>
        <item>Son 1 Ay</item>
        <item>Son 3 Ay</item>
        <item>Bütün Kayıtlar</item>
    </string-array>

    <string name="filtreleme">Filtreleme</string>
    <string name="tarih_araligi">Tarih Aralığı</string>
    <string name="ornek_baslangic_tarihi">2019–05–03\u0020\u0020</string>
    <string name="tire">-</string>
    <string name="ornek_bitis_tarihi">2019–05–04\u0020\u0020</string>
    <string name="islem_turu">İşlem Türü</string>
    <string name="filtrele">Filtrele</string>
    <string-array name="spinner_islem_turleri">
        <item>Tümü</item>
        <item>Alım</item>
        <item>Satım</item>
    </string-array>

    <string name="ornek_gun">23</string>
    <string name="ornek_ay">May</string>
    <string name="ornek_saat">13:38</string>
    <string name="ornek_adet">5</string>
    <string name="adet_text">\u0020adet |\u0020</string>
    <string name="ornek_kullanici">kullanici</string>
    <string name="kadi_guncelle">Güncelle</string>
    <string name="kullanici_ayarlari">Kullanıcı Ayarları</string>
    <string name="sifre_degistir">Şifre Değiştir</string>
</resources>
