<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:backgroundTint="@color/dialogArkaplan">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"

        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/urun_adi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:layout_marginStart="4dp"
            android:layout_marginLeft="0dp"

            android:text="@string/urunadi"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            android:paddingTop="15dp">

            <ImageView
                android:id="@+id/img_barkod"
                android:layout_width="22dp"
                android:layout_height="match_parent"

                android:layout_marginTop="1dp"
                android:layout_weight="1"

                app:srcCompat="@drawable/brwhitered" />

            <TextView
                android:id="@+id/barkod_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/ornekbarkod"
                android:textSize="10sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"

        android:layout_marginTop="10dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:layout_marginBottom="10dp"

        android:orientation="vertical">

        <TextView
            android:id="@+id/urun_adeti"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="end"

            android:paddingTop="2dp"
            android:text="@string/ornekstokadet"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/alis_satis_fiyati"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:gravity="end"

            android:paddingTop="13dp"
            android:text="@string/ornekfiyat"
            android:textSize="13sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_iptal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="85dp"
        android:text="@string/iptal"
        android:textAllCaps="false"
        android:textSize="10sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="19dp"
        android:layout_marginRight="19dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_guncelle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/guncelleButon"
            android:text="@string/stokguncelle"
            android:textAllCaps="false"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_sil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/silButon"
            android:text="@string/stoksil"
            android:textAllCaps="false"
            android:textSize="12sp" />
    </LinearLayout>

</RelativeLayout>