<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GirisYapActivity">

    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="0dp"
        android:layout_height="208dp"

        android:layout_marginStart="52dp"
        android:layout_marginLeft="52dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:layout_marginRight="52dp"

        app:layout_constraintBottom_toTopOf="@+id/txt_kadi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        app:srcCompat="@drawable/logo" />

    <Button
        android:id="@+id/btn_giris_yap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"

        android:text="@string/giris"
        android:textAllCaps="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkbox_giris_bilgisi_hatirla"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/txt_kadi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"

        android:hint="@string/kadi"
        android:inputType="textPersonName"
        android:textSize="20sp"

        app:layout_constraintBottom_toTopOf="@+id/txt_sifre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_logo" />

    <EditText
        android:id="@+id/txt_sifre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"

        android:hint="@string/sifre"
        android:inputType="textPassword"
        android:textSize="20sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_kadi" />

    <TextView
        android:id="@+id/btn_uye_ol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"

        android:text="@string/kaydol"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_giris_yap"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/checkbox_giris_bilgisi_hatirla"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="8dp"

        android:text="@string/hatirla"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_sifre" />



</android.support.constraint.ConstraintLayout>